# oa-sdk

./: .gitignore  AGENTS.md  README.md  pyproject.toml  request_key.py
docs/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  E2E_TESTING.md  IMPLEMENTATION_PLAN.md  MINIMAL_EXAMPLE.md  PROTOCOL.md  README.md  STATUS.md  UNIVERSAL_CORE_PLAN.md
examples/: gemini_live_text.py  infer_with_tickets.py  openrouter_inference.py  request_key_with_store.py
src/oa/: __init__.py
src/oa_sdk/: __init__.py  auth.py  cli.py  client.py  config.py  constants.py  errors.py  keys.py  models.py  retry_policy.py  signatures.py  simple.py  transport.py
src/oa_sdk/inference/: __init__.py  backends.py  gemini_live.py  models.py  openrouter_catalog.py  service.py
src/oa_sdk/tickets/: __init__.py  issuer.py  parser.py  service.py  store.py
tests/: test_auth.py  test_client_workflow.py  test_e2e_live.py  test_gemini_support.py  test_inference.py  test_key_service.py  test_retry_policy.py  test_signatures.py  test_simple_api.py  test_ticket_parser.py  test_ticket_store.py  test_transport.py
